--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Bookstore API",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/Vee-lieve/sd208bookstore#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "joi": "^17.3.0",
     "mongoose": "^5.10.13",
